# my_progect.apps

./: Car Price Predicting.ipynb  Car_Predicting_Price.py  Car_Predicting_Price_app.py  Car_Predicting_Price_apps.py  Car_Predicting_Price_p.py  README.md  pyproject.toml  requrments.txt
.devcontainer/: devcontainer.json
